	'SyLwrpClient::clipThreshold()', 'SyLwrpClient::setClipThreshold()',
	'SyLwrpClient::clipTimeout()' and 'SyLwrpClient::setClipTimeout()'
	methods in 'sy/sylwrp_client.cpp' and 'sy/sylwrpclient.h'.
	* Added 'SyLwrpClient::setClipMonitor()' and
	'SyLwrpClient::setSilenceMonitor()' methods in
	methods in 'sy/sylwrp_client.cpp' and 'sy/sylwrpclient.h'.
2015-12-22 Fred Gleason <fredg@paravelsystems.com>
	* Added 'SySource::label()' and 'SySource::setLabel()' methods in
	'sy/sysource.cpp' and 'sy/sysource.h'.
	* Added 'SyLwrpClient::srcLabel()' and 'SyLwrpClient::setSrcLabel()'
	methods in 'sy/sylwrp_client.cpp' and 'sy/sylwrpclient.h'.
2015-12-22 Fred Gleason <fredg@paravelsystems.com>
	* Added 'sy/syendpoint.h' to the 'include_HEADERS' rule in
	'sy/Makefile.am'.
2015-12-30 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 3:0:0.
	* Incremented the package version to 0.11.0.
2016-03-10 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'sy/sylwrp_client.cpp' that threw a segfault when
	a node disconnected.
2016-03-10 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyMcastSocket::socketErrorText()' static method in
	'sy/symcastsocket.cpp' and 'sy/symcastsocket.h'.
2016-03-11 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 4:0:1.
	* Incremented the package version to 0.11.1.
2016-03-15 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'sy/sylwrp_client.cpp' that caused an infinite loop
	when the LWRP connection attempt was refused by the remote device.
2016-03-15 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 4:1:1.
	* Incremented the package version to 0.11.2.
2016-03-22 Fred Gleason <fredg@paravelsystems.com>
	* Fixed various bugs that broke the build under RHEL 5.
2016-03-22 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 4:2:1.
	* Incremented the package version to 0.11.3.