@@ -433,3 +433,7 @@
 2016-03-22 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the library version to 4:2:1.
 	* Incremented the package version to 0.11.3.
+2016-04-06 Fred Gleason <fredg@paravelsystems.com>
+	* Added 'SyLwrpClient::timeoutInterval()' and
+	'SyLwrpClient::setTimeoutInterval()' methods in
+	'sy/sylwpr_client.cpp' and 'sy/sylwpr_client.h'.
